# rust_opengl

./: Cargo.toml
data/blender/: color_cube.blend  color_cube.blend1
src/: game.rs  main.rs  types.rs  util.rs
src/opengl_backend/: event_handler.rs  mod.rs
src/shaders/: basic.glsl  frag_basic.glsl  frag_triangle.glsl  vert_basic.glsl  vert_triangle.glsl
src/types/: bucket_array.rs  heap_array.rs  matrix4.rs  mesh.rs  mod.rs  model.rs  vertex.rs
